--- a/style.css
+++ b/style.css
@@ -1944,6 +1944,7 @@ a.phone-button:focus,
 	min-height: 0;
 	padding-bottom: 32px;
 	box-sizing: border-box;
+	justify-content: flex-start;
 }
 
 .hero-subtitle {
